# TriImage-Downloader

./: .gitignore  Cargo.toml  TODO.md  settings.ini
.github/workflows/: rust.yml
src/: main.rs
