[package]
name = "triimage-downloader"
version = "0.1.0"
authors = ["Catry <catry.me@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
requests = "0.0.30"
download_rs = {version="0.2.0",features=["sync_download"]}
webbrowser = "0.5.5"
ajson = "0.2.3"
configparser = "1.0.0"